# bookshelf-cutting-generator

./: mini-bookshelf-generator.scad  mini-bookshelf-scad.cabal
.github/workflows/: build.yml  ci.yml  generate-shelf.yml
app/: Main.hs
